--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -3,7 +3,7 @@
     mat-icon-button 
     color="primary"
     aria-label="Add button" 
-    class="add-button"
+    class="add-button no-in-print"
     (click)="createNewList()">
     <mat-icon>playlist_add</mat-icon>
   </button>
