working for lists

--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -3,7 +3,7 @@
 </h2>
 <mat-dialog-content>
   <p>
-    Willst du wirklich dien Eintrag löschen?
+    {{ infoText }}
   </p>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
