--- a/src/app/list/list-dialog/list-dialog.component.scss
+++ b/src/app/list/list-dialog/list-dialog.component.scss
@@ -1,3 +1,18 @@
 mat-form-field {
   width: 100%;
 }
+
+.settings-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
+}
+
+.center-text {
+  width: 100%;
+  text-align: center;
+}
+
+::ng-deep .mat-mdc-tab-body {
+  min-height: 250px;
+}
