--- a/src/app/list/list-dialog/list-dialog.component.html
+++ b/src/app/list/list-dialog/list-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title class="center-text">
-  Neue List erstellen
+  <span *ngIf="!dialog">Neue Liste erstellen</span>
+  <span *ngIf="dialog">Liste bearbeiten</span>
 </h2>
 <form 
   [formGroup]="form" 
